# seqpaint

./: README.md  pyproject.toml
.github/workflows/: ci.yml
examples/: README.md
examples/comparative/: README.md
examples/formats/: README.md  spike_interactive.html
examples/hilbert/: README.md
examples/layouts/: README.md
examples/palettes/: README.md
examples/single/: README.md
src/seqpaint/: __init__.py  canvas.py  compare.py  core.py  fetch.py  gff.py  io.py  kmer.py  layouts.py  overlay.py  palette.py
src/seqpaint/cli/: __init__.py  compare_cmd.py  detect.py  gc_cmd.py  paint_cmd.py
tests/: test_cli.py  test_compare.py  test_core.py  test_fetch.py  test_gff.py  test_io.py  test_kmer.py  test_layouts.py  test_palette.py
tests/fixtures/: multi.fna  tiny.faa  tiny.fna  tiny.gff  with_comments.fna
